[project]
name = "wfmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "streamlit>=1.52.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include =  "."
